# higher-kinded-types.rs

./: Cargo.toml  README.md  change_version.sh  rust-toolchain.toml
.cargo/: config
.github/workflows/: CI.yml  future-proof.yml
book/: book.toml  rust-toolchain.toml  tweaks.css
book/src/: README.md  SUMMARY.md  explain-sort-by-lifetimes.md  forlt_any_example.rs  generic-output-sort-by-lifetimes.md  hkts-sort-by-lifetimes.md  lifetime-any-00.md  lifetime-any-10-cell.md  lifetime-any-20-generalizing.md  lifetime-any-30-hkt.md  lifetime-any.md  may-dangle-00.md  may-dangle-10-oibits.md  may-dangle-20-drop.md  may_dangle_drop_exploit.rs  may_dangle_oibit_exploit.rs  motivating-example-00.md  motivating-example-20-genericicty.md  motivating-example-30-hkts.md  motivating-example.md  naive_any_example.rs  what-are-hkts.md
src/: _lib.rs  compile_fail_tests.md  extra_arities.rs  fn_traits.rs  hkt_macro.rs  hkt_muncher.rs  lib.rs  other_arities.rs  soul_split.rs  type_eq.rs  utils.rs
src/advanced/: extra_arities.rs  mod.rs  type_eq.rs
